syntax = "proto3";

package grpc;

option go_package = "./grpc";

import "user.proto";

message Album {
  int64 id = 1;
  string name = 2;
  string artist = 3;
}

message Poll {
  string name = 1;
  int64 id = 2; 
  repeated Album albums = 3;
  int32 creator_id = 4;
}

message Vote {
  int32 poll_id = 1;
  int64 album_id = 2;
  int32 user_id = 3; 
}

message PollQuery {
  int32 poll_id = 1;
}

message AlbumVotesQuery {
  int32 poll_id = 1;
  int64 album_id = 2;
}

message NewPoll {
  string name = 1;
  int32 creator_id = 2;
}

message NewPollAlbum {
  int64 poll_id = 1;
  int64 album_id = 2;
}

message NewPollAlbumResponse {
  int32 poll_id = 1;
  Album album = 2;
}

service Voting {
  rpc CreatePoll(NewPoll) returns (Poll) {}
  rpc AddPollAlbums(stream NewPollAlbum) returns (stream NewPollAlbumResponse) {}
  rpc GetPollDetails(PollQuery) returns (Poll) {}
  rpc VoteAlbum(Vote) returns (Vote) {}
  rpc GetAlbumVote(AlbumVotesQuery) returns (stream Vote) {}
}